--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet/less" type="text/css" href="styles/styles.less" />
     <!-- endbuild -->
+    <link rel="stylesheet" href="styles/main-less.css">
   </head>
   <body ng-app="moneyBestBeforeApp">
     <!--[if lte IE 8]>
@@ -73,7 +74,7 @@
       ga('send', 'pageview');
     </script>
 
-    <!-- build:remove -->
+    <!-- build:remove:dist -->
     <script src="bower_components/prefix-free/prefixfree.js"></script>
     <script src="bower_components/less/dist/less.min.js"></script>
     <!-- /build -->
@@ -92,11 +93,11 @@
     <script src="bower_components/underscore/underscore.js"></script>
     <script src="bower_components/moment/moment.js"></script>
     <script src="bower_components/bootstrap-calendar/js/calendar.js"></script>
-    <script src="bower_components/bootstrap-calendar/js/language/ja-JP.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
-    <!-- build:remove -->
+    <!-- build:remove:dist -->
+    <script src="bower_components/bootstrap-calendar/js/language/ja-JP.js"></script>
     <script src="bower_components/angular.less/angular.less.js"></script>
     <!-- /build -->
     <script>
